--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,4 +13,6 @@ $breakpoints: (
     big: 950px,
     pre-big: 900px,
     extra-medium: 750px,
+    big-mobile: 400px,
+    medium-mobile: 350px,
 );
